section5/ingress/service_blue.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-blue-nginx
spec:
  selector:
    app: nginx-blue
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
