section5/ingress/service_green.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-green-nginx
spec:
  selector:
    app: nginx-green
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
