section5/ingress/ingress_multipath.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: ingresstest
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /  # Ensures path is rewritten to root
spec:
  rules:
  - host: iam7hills.com
    http:
      paths:
      - backend:
          service:
            name: svc-green-nginx
            port:
              number: 80
        path: /green
        pathType: Exact
      - backend:
          service:
            name: svc-blue-nginx
            port:
              number: 80
        path: /blue
        pathType: Exact
